@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-10-29T16:21:54Z",
+  "timestamp" : "2022-10-30T01:49:20Z",
   "count_outdated" : 412,
   "uniques_outdated" : 225,
-  "count" : 437,
+  "count" : 438,
   "uniques" : 239,
   "clones" : [
     {
@@ -91,8 +91,8 @@
     },
     {
       "timestamp": "2022-10-29T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
